# my-website

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.production  Procfile  README.md  db.sqlite3  docker-compose.production.yaml  docker-compose.yaml  pyproject.toml
apps/core/: apps.py  blocks.py  models.py
apps/core/migrations/: 0001_initial.py
apps/home/: blocks.py  models.py
apps/home/migrations/: 0004_homepage_featured_projects_homepage_hero_image_and_more.py  0005_remove_homepage_social_links.py
apps/home/templates/home/: home_page.html
apps/projects/: apps.py  blocks.py  models.py
apps/projects/migrations/: 0001_initial.py  0003_alter_projectpage_options_projectpage_weight_and_more.py
apps/projects/templates/projects/: project_page.html  projects_page.html
config/: wsgi.py
config/settings/: base.py  dev.py  production.py
config/templates/: base.html
home/: models.py
home/migrations/: 0003_homepage_about_content.py  0003_homepage_about_content_homepage_hero_image_and_more.py
home/templates/home/: home_page.html
nginx/: default.conf
projects/: apps.py  models.py
projects/migrations/: 0002_remove_projectspage_content_and_more.py
projects/templates/projects/: projects_page.html
website/settings/: base.py
